tests/sksl/errors/Ossfuzz29128.sksl
int x;
half an() {2%8;x&=7+ 22;return 2;;}void wna() {   an() .1x .Ty   ;1/+x.x.1sxx.x1x.1x.1x.x0x1; +1/-an() .1sxx.x1x .Ty.1x.1x.1xx.0x1; +1/-x.x1x .Ty.1x.1x.1Lxx. p  +1/-an() .1sxx        ;;;;;; an() .1x .Ty   ;1/+x.x.1sx .Ty   ;1/+x.x.1sxx.x1x.1x.1x.x0x1; +1/-an() .1sxx.x1x .Ty.1x.1x.1xx.0x1; +1/-x.x1x .Ty.1x.1x.1xx.0x1; +1/-an() .1sxx.x1x .Ty.1x.1xx. p; ;1/-an(); ~0/-an() .1sxx.xqx.0x.Lxx. p; +1/-an() . sxx.x1x .Ty.1x.Lxx. p; +x.Lxx. p  +1/-an() .1sxx.x; ~0/-an() .1sxx.xqx.0x.Lxx. p; +1/-an() . sxx.x1x .Ty.1x.Lxx. p; +x.Lxx. p  +1/-an() .1sxx        ;;;;;; an() .1x .Ty   ;1/+x.x.1sxx.x1x.1x.1x.x0x1; +1/-an() .1sxx.x1x .Ty.1x.1x.1xx.0x1; +1/-x.x1x .Ty.1x.1x.1xx.0x1; +1/-an() .1sx.x1x .Ty.1x.Lxx. p; +x.Lxx. p  +1/-an() .1sxx.x; ~0/-an() .1sxx.xqx.0x.Lxx. p; +1/-an() . sxx.x1x .Ty.1x.Lxx. p; +x.Lxx. p  +1/-an() .1sxx        ;;;;;; an() .1x .Ty   ;1/+x.x.1sx .Ty   ;1/+x.x.1sxx.x1x.1x.1x.x0x1; +1/-an() .1sxx.x1x .Ty.1x.1x.1xx.0x1; +1/-x.x1x .Ty.1x.1x.1xx.0x1; +1/-an() .1sxx.x1x .Ty.1x.1xx. p; ;1/-an(); ~0/-an() .1sxx.xqx.0x.Lxx. p; +1/-an() . sxx.x1x .Ty.1x.Lxx. p; +x.Lxx. p  +1/-an() .1sxx.x; ~0/-an() .1sxx.xqx.0x.Lxx. p; +1/-an() . sxx.x1x .TyT  -an() . s/+an(); an();an()-an() + 44;}void  na() {
 29  -an();wna() ;;;  +an();wna();;an();wna();;an();0*2;wna(); an();;;an();130*2;wna(); an();wna();0 ;an();-22 +an();wna();;an();1*2;wna(); an();wna();;+an();wna();;an();wna();;an();1*2;wna(); an();98 ;;;;;2*~22    ;wna();899 ;; ;;;1*~22     ;an();wna(); ;;;}void qma()  { na(), na();}